--- a/index.html
+++ b/index.html
@@ -7,14 +7,67 @@
 	<meta name="description" content="Описание в поиске" >
 	<meta name="keywords" content="Ключевые слова поиска" >
 	<meta name="robots" content="none">
-	<meta name="Author" content="Пупкин Василий Петрович"> 
-	<meta name="Copyright" content="Зимина Татьяна Юрьевна"> 
+	<meta name="Author" content="Пупкин Василий Петрович">
+	<meta name="Copyright" content="Зимина Татьяна Юрьевна">
 	<meta name="Address" content="Луна, кратер №97">
 	<title>Заголовок сайта</title>
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
- <div class="da"></div>
-	
+	<header class="page-header">
+		<nav class="navigation">
+			<ul class="navigation-list">
+				<li class="navigation-item">
+					<a href="about.html" class="navigation-link" >О нас</a>
+				</li>
+				<li class="navigation-item">
+					<a href="catalog.html" class="navigation-link" >Каталог</a>
+				</li>
+				<li class="navigation-item">
+					<a href="faq.html" class="navigation-link" >Частые вопросы</a>
+				</li>
+
+			</ul>
+		</nav>
+		<nav class="navigation-user">
+			<ul class="navigation-list">
+				<li class="navigation-item">
+					<a href="#" class="navigation-link" > <span class="visually-hidden"> Поиск </span></a>
+				</li>
+				<li class="navigation-item">
+					<a href="#" class="navigation-link" ><span class="visually-hidden"></span>Корзина </span></a>
+				</li>
+				<li class="navigation-item">
+					<a href="#" class="navigation-link" >Вход</a>
+				</li>
+
+			</ul>
+		</nav>
+	</header>
+	<main class="main-index">
+		<h1 class="visually-hidden"> Барбершоп бородинский</h1>
+		<img src="#" alt="Логотип барбершопа" class="logo">
+		<section class="advantages">
+			<h2 class="visually-hidden">Преимущества</h2>
+			<ul class="advantages-list">
+				<li class="advantages-item">
+					<h3 class="advantages-tittle" >Быстро</h3>
+					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
+				</li>
+				<li class="advantages-item">
+					<h3 class="advantages-tittle" >Круто</h3>
+					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
+				</li>
+				<li class="advantages-item">
+					<h3 class="advantages-tittle" >Не дорого</h3>
+					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
+				</li>
+
+			</ul>
+		</section>
+
+
+	</main>
+
 </body>
 </html>
