--- a/index.html
+++ b/index.html
@@ -14,60 +14,125 @@
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<header class="page-header">
-		<nav class="navigation">
-			<ul class="navigation-list">
-				<li class="navigation-item">
-					<a href="about.html" class="navigation-link" >О нас</a>
-				</li>
-				<li class="navigation-item">
-					<a href="catalog.html" class="navigation-link" >Каталог</a>
-				</li>
-				<li class="navigation-item">
-					<a href="faq.html" class="navigation-link" >Частые вопросы</a>
-				</li>
-
-			</ul>
-		</nav>
-		<nav class="navigation-user">
-			<ul class="navigation-list">
-				<li class="navigation-item">
-					<a href="#" class="navigation-link" > <span class="visually-hidden"> Поиск </span></a>
-				</li>
-				<li class="navigation-item">
-					<a href="#" class="navigation-link" ><span class="visually-hidden"></span>Корзина </span></a>
-				</li>
-				<li class="navigation-item">
-					<a href="#" class="navigation-link" >Вход</a>
-				</li>
-
-			</ul>
-		</nav>
-	</header>
-	<main class="main-index">
-		<h1 class="visually-hidden"> Барбершоп бородинский</h1>
-		<img src="#" alt="Логотип барбершопа" class="logo">
-		<section class="advantages">
-			<h2 class="visually-hidden">Преимущества</h2>
-			<ul class="advantages-list">
-				<li class="advantages-item">
-					<h3 class="advantages-tittle" >Быстро</h3>
-					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
-				</li>
-				<li class="advantages-item">
-					<h3 class="advantages-tittle" >Круто</h3>
-					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
-				</li>
-				<li class="advantages-item">
-					<h3 class="advantages-tittle" >Не дорого</h3>
-					<p class="advantages-discriotin"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, eaque. Harum amet inventore sequi? Quibusdam praesentium id blanditiis et perferendis non suscipit dolores vel. Explicabo ducimus labore molestias deserunt aspernatur?</p>
-				</li>
-
-			</ul>
-		</section>
-
-
-	</main>
-
+    <div class="wrapper">
+        <div class="content">
+            <div class="hi">
+                <div class="container">
+                    <div class="hi__row">
+                        <div class="hi__body">
+                            <h1 class="hi__tittle">Привет, друг!</h1>
+                            <ul class="hi__subtite">
+                                <li>  У тебя все получится!</li>
+                                <li>  Никогда не сдавайся!</li>
+                                <li>  Сегодня ты уже знаешь больше чем вчера!</li>
+                                <li>  Спасибо тебе за поддержку!</li>
+                            </ul>
+                        </div>
+                        <div class="hi__image">
+                            <img src="/img/hi/shape_9_345.jpg" alt="Логотип фрилансер по жизни">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="what">
+                <div class="container">
+                    <div class="what__row">
+                        <div class="what__image"> <img src="/img/what/video_14.jpg" alt="Схема работы"></div>
+                        <div class="what__body">
+                            <div class="what__tittle tittle">Что такое FlexBox?</div>
+                            <div class="what__subtittle">
+                            <p>Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для родителя flex-контейнера так и для его дочерних элементов flex-элементов. </p>
+                            <p>Основным преимуществом гибкой FLEX разметки является возможность изменять ширину/высоту пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом заполнить доступное пространство flex-контейнера</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="container">
+                    <div class="columns__tittle tittle">Колонки с Flex-контейнерами</div>
+                    <div class="columns__row">
+                        <div class="columns__column">
+                            <div class="columns__item item">
+                                <div class="item__row">
+                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                    <div class="item__body">
+                                        <div class="item__tittle">The description for the image</div>
+                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columns__column">
+                            <div class="columns__item item">
+                                <div class="item__row">
+                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                    <div class="item__body">
+                                        <div class="item__tittle">The description for the image</div>
+                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columns__column">
+                            <div class="columns__item item">
+                                <div class="item__row">
+                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                    <div class="item__body">
+                                        <div class="item__tittle">The description for the image</div>
+                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columns__column">
+                            <div class="columns__item item">
+                                <div class="item__row">
+                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                    <div class="item__body">
+                                        <div class="item__tittle">The description for the image</div>
+                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical">
+                <div class="container">
+                    <div class="vertical__title tittle">Вертикальное выравнивание</div>
+                    <div class="vertical__row">
+                        <div class="vertical__column">
+                            <div class="vertical__tittle">Буду рад</div>
+                            <div class="vertical__subtittle">подписке</div>
+                            <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.</div>
+                            <a href="#" class="vertical__button">подписаться</a>
+                        </div>
+                        <div class="vertical__column">
+                            <div class="vertical__tittle">Буду рад</div>
+                            <div class="vertical__subtittle">лайку</div>
+                            <div class="vertical__text"> <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.</p></div>
+                            <a href="#" class="vertical__button">подписаться</a>
+                        </div>
+                        <div class="vertical__column">
+                            <div class="vertical__tittle">Буду рад</div>
+                            <div class="vertical__subtittle">комментарию</div>
+                            <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</div>
+                            <a href="#" class="vertical__button">комментировать</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__row">
+                    <div class="footer__text">Фрилансер по жизни</div>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
