--- a/index.html
+++ b/index.html
@@ -15,84 +15,83 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="content">
-            <div class="hi">
+        <header class="header">
                 <div class="container">
-                    <div class="hi__row">
-                        <div class="hi__body">
-                            <h1 class="hi__tittle">Привет, друг!</h1>
-                            <ul class="hi__subtite">
-                                <li>  У тебя все получится!</li>
-                                <li>  Никогда не сдавайся!</li>
-                                <li>  Сегодня ты уже знаешь больше чем вчера!</li>
-                                <li>  Спасибо тебе за поддержку!</li>
+                    <div class="header__row">
+                        <div class="header__body">
+                            <h1 class="header__title">Привет, друг!</h1>
+                            <ul class="header__subtitle">
+                                <li>У тебя все получится!</li>
+                                <li>Никогда не сдавайся!</li>
+                                <li>Сегодня ты уже знаешь больше чем вчера!</li>
+                                <li>Спасибо тебе за поддержку!</li>
                             </ul>
                         </div>
-                        <div class="hi__image">
-                            <img src="/img/hi/shape_9_345.jpg" alt="Логотип фрилансер по жизни">
-                        </div>
+                        <div class="header__image"><img src="/img/hi/shape_9_345.jpg" alt="Логотип фрилансер"></div>
                     </div>
                 </div>
-            </div>
+        </header>
+        <main class="content">
             <div class="what">
                 <div class="container">
                     <div class="what__row">
-                        <div class="what__image"> <img src="/img/what/video_14.jpg" alt="Схема работы"></div>
+                        <div class="what__img"> <img src="/img/what/video_14.jpg" alt="what is it"> </div>
                         <div class="what__body">
-                            <div class="what__tittle tittle">Что такое FlexBox?</div>
-                            <div class="what__subtittle">
-                            <p>Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для родителя flex-контейнера так и для его дочерних элементов flex-элементов. </p>
-                            <p>Основным преимуществом гибкой FLEX разметки является возможность изменять ширину/высоту пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом заполнить доступное пространство flex-контейнера</p>
+                            <div class="what__title title">Что такое FlexBox
+                            </div>
+                            <div class="what__subtitle">
+                            <p>  Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для родителя flex-контейнера так и для его дочерних элементов flex-элементов. </p>
+                            <p>   Основным преимуществом гибкой FLEX разметки является возможность изменять ширину/высоту пространство вокруг и порядок flex-элементов, для того чтобы наилучшим образом заполнить доступное пространство flex-контейнера</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="columns">
+            <div class="flex-columns">
                 <div class="container">
-                    <div class="columns__tittle tittle">Колонки с Flex-контейнерами</div>
-                    <div class="columns__row">
-                        <div class="columns__column">
-                            <div class="columns__item item">
+                    <div class="flex-columns__tittle title">Колонки с flex-контейнерами</div>
+                    <div class="flex-columns__row">
+                        <div class="flex-columns__column">
+                            <div class="flex-columns__item item">
                                 <div class="item__row">
-                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
-                                    <div class="item__body">
-                                        <div class="item__tittle">The description for the image</div>
-                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
-                                    </div>
+                                        <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                        <div class="item__body">
+                                            <div class="item__title">The description for the image</div>
+                                            <div class="item__subtitle">Pariatur iure ab sunt nesciun </div>
+                                </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="columns__column">
-                            <div class="columns__item item">
+                        <div class="flex-columns__column">
+                            <div class="flex-columns__item item">
                                 <div class="item__row">
-                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
-                                    <div class="item__body">
-                                        <div class="item__tittle">The description for the image</div>
-                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
-                                    </div>
+                                        <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                        <div class="item__body">
+                                            <div class="item__title">The description for the image</div>
+                                            <div class="item__subtitle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="columns__column">
-                            <div class="columns__item item">
+                        <div class="flex-columns__column">
+                            <div class="flex-columns__item item">
                                 <div class="item__row">
-                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
-                                    <div class="item__body">
-                                        <div class="item__tittle">The description for the image</div>
-                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
-                                    </div>
+                                        <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                        <div class="item__body">
+                                            <div class="item__title">The description for the image</div>
+                                            <div class="item__subtitle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="columns__column">
-                            <div class="columns__item item">
+                        <div class="flex-columns__column">
+                            <div class="flex-columns__item item">
                                 <div class="item__row">
-                                    <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
-                                    <div class="item__body">
-                                        <div class="item__tittle">The description for the image</div>
-                                        <div class="item__subtittle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
-                                    </div>
+                                        <div class="item__image"> <img src="/img/columns/image_126.jpg" alt=""> </div>
+                                        <div class="item__body">
+                                            <div class="item__title">The description for the image</div>
+                                            <div class="item__subtitle">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</div>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -101,35 +100,36 @@
             </div>
             <div class="vertical">
                 <div class="container">
-                    <div class="vertical__title tittle">Вертикальное выравнивание</div>
-                    <div class="vertical__row">
-                        <div class="vertical__column">
-                            <div class="vertical__tittle">Буду рад</div>
-                            <div class="vertical__subtittle">подписке</div>
-                            <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.</div>
-                            <a href="#" class="vertical__button">подписаться</a>
-                        </div>
-                        <div class="vertical__column">
-                            <div class="vertical__tittle">Буду рад</div>
-                            <div class="vertical__subtittle">лайку</div>
-                            <div class="vertical__text"> <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.</p></div>
-                            <a href="#" class="vertical__button">подписаться</a>
-                        </div>
-                        <div class="vertical__column">
-                            <div class="vertical__tittle">Буду рад</div>
-                            <div class="vertical__subtittle">комментарию</div>
-                            <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</div>
-                            <a href="#" class="vertical__button">комментировать</a>
+                    <div class="vertical__title title">Вертикальное выравниавание</div>
+                    <div class="vertical__body">
+                        <div class="vertical__row">
+                            <ul class="vertical__column">
+                                    <li class="vertical__card-title">буду рад</li>
+                                    <li class="vertical__subtitle">подписке</li>
+                                    <li class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.</li>
+                                    <li class="vertical__button">  <a href="#">подписаться</a> </li>
+                            </ul>
+                            <ul class="vertical__column">
+                                <li class="vertical__card-title">буду рад</li>
+                                <li class="vertical__subtitle">подписке</li>
+                                <li class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.</li>
+                                <li class="vertical__button">  <a href="#">подписаться</a> </li>
+                            </ul>
+                            <ul class="vertical__column">
+                            <li class="vertical__card-title">буду рад</li>
+                            <li class="vertical__subtitle">подписке</li>
+                            <li class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.</li>
+                            <li class="vertical__button">  <a href="#">подписаться</a> </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
         <footer class="footer">
-            <div class="container">
-                <div class="footer__row">
-                    <div class="footer__text">Фрилансер по жизни</div>
+            <div class="footer__row">
+                <div class="footer__text">
+                    Фрилансер по жизни 2019
                 </div>
             </div>
         </footer>
